# ad_low_noise_float_2023_git

./: .gitignore  20250407a_berechnungen.ods  20250619a_ad_reference.odg  20250714c_inbetriebnahme_v0.3.ods  20250811a_umfrage_beduerfnisse.ods  20250815a_ad_counting_vorschlag.odg  20250822a_inbetriebnahme_v0.4.ods  LICENSE  README.md  ad_low_noise_float_2023_git.code-workspace  pyproject.toml  vergleich_ad.ods
.github/workflows/: decoder_wheels.yml  dummy-ad_low_noise_float_2023-sdist.yml  dummy-decoder_pip.yml  pico_build_uf2.yaml  software_ad_low_noise_float_2023_wheels.yml  software_decoder_pip.yml  software_decoder_wheels.yml  software_pico_build_uf2.yaml
20250811_peak_5khz/: note.txt
hardware/20250612_review/: 20250612a_0010_Peter_s_ADC_Review.ods
hardware/20250703_review/: 20250703a_0010_Peter_s_ADC_Review.ods
hardware/ADS1256_versuch/: 20250321a_ADS1256_vorversuch_konzept.odg  beschreibung.txt
hardware/components/ad/: ADS127L21_einstellungen.ods
hardware/components/dc_dc_converter/: 20250612_bleche_u_metall.txt
hardware/components/ferrite/: note.txt
hardware/components/front/: 20250623b_front.odg  20250819a_front.odg  20250825a_front.odg  20250825b_front.odg  20250905a_front_counting.odg  20250905a_front_peter_ad.odg
hardware/components/optocoupler/: beschaltung.txt
hardware/components/relais/: readme.txt  relaistest.py
hardware/kicad/: 00_project_library.bak  00_project_library.kicad_sym  01_rp2350.kicad_sym  README_kicad_checklist.md  fp-lib-table  pcb_ad_low_noise_float_2023.kicad_pcb  pcb_ad_low_noise_float_2023.kicad_prl  pcb_ad_low_noise_float_2023.kicad_pro  pcb_ad_low_noise_float_2023.kicad_sch  pcb_ad_low_noise_float_2023_rp2350.kicad_sch  pcb_ad_low_noise_float_2023_usb.kicad_sch  sym-lib-table
hardware/kicad/00_project_library.pretty/: CP_Radial_D18.0mm_P7.50mm_flach_unten.kicad_mod  Converter_DCDC.kicad_mod  NetTie-2_Peter.kicad_mod  NetTie-2_Peter_wide_back.kicad_mod  RJ45_BEL_SS74301-00x_Vertical.kicad_mod  USB_C_Receptacle_Palconn_UTC16-G.kicad_mod  distanzbolz_3.kicad_mod  octoprobe_breakout_PB.kicad_mod  octoprobe_breakout_PB_GND.kicad_mod  octoprobe_breakout_PB_NC.kicad_mod  stiftenleiste_bruecke.kicad_mod
hardware/kicad/01_rp2350_60QFN.pretty/: JST_SH_SM03B-SRSS-TB_1x03-1MP_P1.00mm_Horizontal.kicad_mod  L_pol_2016.kicad_mod  SOIC-8_5.23x5.23mm_P1.27mm.kicad_mod  (+2 more)
hardware/kicad_evaluation_2350/: README_rp2350_reference_pcb.md
instructions/: 20250919b_instructions_ad_low_noise_float_2023.odt
instructions/measurements_used_in_instructions/: 2V_extern.7z  2V_extern_zoom.7z  short_in_box.7z
software/decoder/: .gitignore  README_PEP503.md  run_build_and_test.sh
software/doc/: README_decoder_labber.md  README_measurements_protocol.md  README_usb_collected.md
software/pico/: CMakeLists.txt  README_TODO_2025-04-09a.md  pico.code-workspace
src/ad_low_noise_float_2023/: ad.py  cli.py  constants.py
(+42 files in other folders)
