[project]
name = "ad-low-noise-float-2023"
description = "ad_low_noise_float_2023_git"
readme = "README.md"
requires-python = ">=3.7.6"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
    { name = "Hans Märki", email = "buhtig.hans.maerki@ergoinfo.ch" },
    { name = "Peter Märki", email = "github.com.public.peter@ergoinfo.ch" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ad-low-noise-float-2023-decoder",
    # https://github.com/nanophysics/compact_2012/blob/master/requirements.txt
    "pyserial>=3.5",
    "types-pyserial>=3.5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://github.com/petermaerki/ad_low_noise_float_2023_git"
Documentation = "https://github.com/petermaerki/ad_low_noise_float_2023_git"
Repository = "https://github.com/petermaerki/ad_low_noise_float_2023_git"

[project.scripts]
ad_low_noise_float_2023 = "ad_low_noise_float_2023.cli:main"

[project.optional-dependencies]
all = []
dev = [
    # "-e .",
]
doc = []

[tool.pdm]
version = { source = "file", path = "src/ad_low_noise_float_2023/__init__.py" }
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = [
    "src/ad_low_noise_float_2023/",
]
source-includes = [
    "LICENSE",
    "README.rst"
]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
exclude = []

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "I001", # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    # "W191",  # indentation contains tabs
    "D",     # enable docstring checks
    "B027",  #  empty method in an abstract base class
]

[tool.ruff.lint.isort]
# known-third-party = ["usbhubctl"]
# known-local-folder = ["usbhubctl"]
case-sensitive = true
combine-as-imports = true
order-by-type = false
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
